--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@
   margin: 0;
   padding: 0;
 }
-.container{
-  color:#1133af;
+ ul{
+   list-style: none;
+ }
+ a{
+   text-decoration: none;
+ }
+.header{
+  width: 100%;
+  height: 1px;
+  background-color: rgb(225,94,94);
 }
