--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,22 @@
   margin: 0;
   padding: 0;
 }
- ul{
-   list-style: none;
- }
- a{
-   text-decoration: none;
- }
-.header{
-  width: 100%;
-  height: 1px;
-  background-color: rgb(225,94,94);
+header{
+  width: 90%;
+  border-top: 2px solid  #e05e5e;
 }
+ ul{list-style: none;}
+ a{text-decoration: none;}
+
+  ul li a{
+   float: left;
+   font-size: 10pt;
+   margin-left: 15px;
+   color: #8e6161;
+ }
+  ul li a:hover{
+    border-radius: 10px;
+    background-color: rgba(96, 59, 95, 0.04);
+    text-decoration: none;
+    color: #9e4d4d;
+ }
