--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,17 @@ header{
  a{text-decoration: none;}
 
   ul li a{
-   float: left;
    font-size: 10pt;
    margin-left: 15px;
-   color: #8e6161;
+   color: #bb2424;
  }
   ul li a:hover{
-    border-radius: 10px;
+    border-radius: 3px;
     background-color: rgba(96, 59, 95, 0.04);
     text-decoration: none;
     color: #9e4d4d;
  }
+.menu{
+  height:40px;
+  border-bottom: 1px solid  #d7d7d7;
+}
