--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ nav{
 
   ul li a{
    font-size: 10pt;
-
    color: #bb2424;
  }
   ul li a:hover{
@@ -22,3 +21,5 @@ nav{
     text-decoration: none;
     color: #a82626;
  }
+ssvd
+gwviugi
