--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,30 @@
-*{
-  margin: 0;
-  padding: 0;
-}
-header{
-}
- ul{list-style: none;}
- a{text-decoration: none;}
-
-nav{
-  border-radius: 3px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-  ul li a{
-   font-size: 10pt;
+header {}
 
-   color: #bb2424;
- }
-  ul li a:hover{
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+nav {
+    border-radius: 3px;
+}
+
+ul li a {
+    font-size: 10pt;
+    color: #bb2424;
+}
+
+ul li a:hover {
     border-radius: 3px;
     background-color: rgba(96, 59, 95, 0.04);
     text-decoration: none;
     color: #a82626;
- }
+}
