--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,30 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
-header{
-}
- ul{list-style: none;}
- a{text-decoration: none;}
 
-nav{
+nav {
   border-radius: 3px;
-  background-color: rgba(0, 0, 0, 0);
 }
 
-nav a{
+nav a {
   font-size: 10pt;
   color: rgb(134, 65, 50);
 }
 
-  nav a:hover{
-    border-radius: 3px;
-    background-color: rgba(96, 59, 95, 0.04);
- }
+nav a:hover {
+  border-radius: 3px;
+  background-color: rgba(96, 59, 95, 0.04);
+}
+#ua, #ru{
+    font-size: .6rem;
+    padding: .2rem .2rem .2rem .2rem;
+    height: 1.5rem;
+    color: rgb(255, 255, 255);
+    background-color: rgba(204, 69, 69, 0.71);
+}
+.con{
+    width: 100%;
+    height: 500px;
+    background-color: rgb(93, 179, 30)
+}
