--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,12 @@
   margin: 0;
   padding: 0;
 }
-
+a{
+    text-decoration: none;
+}
 nav {
   border-radius: 3px;
+  box-shadow: 0 0 5px rgba(223,175,220,0.5);
 }
 
 nav a {
@@ -21,10 +24,15 @@ nav a:hover {
     padding: .2rem .2rem .2rem .2rem;
     height: 1.5rem;
     color: rgb(255, 255, 255);
-    background-color: rgba(204, 69, 69, 0.71);
 }
 .con{
     width: 100%;
     height: 500px;
     background-color: rgb(93, 179, 30)
+}
+.phone img{
+    width: 60px;
+    height: 60px;
+    margin: 20px 10px;
+    float: left;
 }
