--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,66 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
-a{
+
+ul li {
     text-decoration: none;
 }
+
+a {
+    text-decoration: none;
+}
+
 nav {
-  border-radius: 3px;
-  box-shadow: 0 0 5px rgba(223,175,220,0.5);
+    border-radius: 3px;
+    box-shadow: 0 0 5px rgba(223, 175, 220, 0.5);
+}
+
+body {
+    background-color: #e98484;
 }
 
 nav a {
-  font-size: 10pt;
-  color: rgb(134, 65, 50);
+    font-size: 10pt;
+    color: rgb(134, 65, 50);
 }
 
 nav a:hover {
-  border-radius: 3px;
-  background-color: rgba(96, 59, 95, 0.04);
+    border-radius: 3px;
+    background-color: rgba(96, 59, 95, 0.04);
 }
-#ua, #ru{
+
+#ua, #ru {
     font-size: .6rem;
     padding: .2rem .2rem .2rem .2rem;
     height: 1.5rem;
     color: rgb(255, 255, 255);
 }
-.con{
-    width: 100%;
-    height: 500px;
-    background-color: rgb(93, 179, 30)
+
+.head{
+    height: 70px;
+    background-color: #7a3131;
 }
-.phone img{
+
+.cart span{
+    float: right;
+}
+.cart img{
+    margin-top: 5px;
+    float: right;
     width: 60px;
     height: 60px;
-    margin: 20px 10px;
-    float: left;
+}
+
+.bloc1 {
+    height: 35px;
+    background-color: #22a452;
+}
+
+.bloc2 {
+    background-color: #bef40a;
+}
+
+.bloc3 {
+    background-color: #ed0d0d;
 }
