--- a/css/style.css
+++ b/css/style.css
@@ -38,22 +38,26 @@ nav a:hover {
 }
 
 .head{
-    height: 70px;
     background-color: #7a3131;
+}
+
+.cart p{
+    text-align: center;
+    font-size: 12pt;
 }
 
 .cart span{
     float: right;
+    position: absolute;
+    margin: 0px auto;
 }
 .cart img{
-    margin-top: 5px;
-    float: right;
     width: 60px;
     height: 60px;
 }
 
 .bloc1 {
-    height: 35px;
+
     background-color: #22a452;
 }
 
