--- a/css/style-media.css
+++ b/css/style-media.css
@@ -8,12 +8,18 @@
 /****************************************************** Адаптив (992) **************************************************************************************************/
 
 @media screen and (max-width: 992px) {
+    .bloc1 img {
+        display: none;
+    }
 
 }
 
 /****************************************************** Адаптив (768) **************************************************************************************************/
 
 @media screen and (max-width: 768px) {
+    .bloc1 img {
+        display: none;
+    }
 
 }
 
@@ -24,12 +30,18 @@
         width: 4rem;
         font-size: .8rem;
     }
+    .bloc1 img {
+        display: none;
+    }
 
 }
 @media screen and (max-width: 320px) {
     .cart img{
         width: 3.5rem;
         height: 2.7rem;
+    }
+    .bloc1 img {
+        display: none;
     }
 
 }
