--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,76 @@
-*{
-  margin: 0;
-  padding: 0;
-}
-header{
-}
- ul{list-style: none;}
- a{text-decoration: none;}
-
-nav{
-  border-radius: 3px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-  ul li a{
-   font-size: 10pt;
+header {}
 
-   color: #bb2424;
- }
-  ul li a:hover{
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+nav {
+    border-radius: 3px;
+}
+
+ul li a {
+    font-size: 10pt;
+    color: #bb2424;
+}
+
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 56px;
+}
+
+ul li a:hover {
     border-radius: 3px;
     background-color: rgba(96, 59, 95, 0.04);
     text-decoration: none;
     color: #a82626;
- }
+}
+
 /*стили для футера*/
 
 @import url(http://fonts.googleapis.com/css?family=Fjalla+One);
 @import url(http://fonts.googleapis.com/css?family=Gudea);
-.footer1 {
-    background: #fff url("../images/footer/footer-bg.png") repeat scroll left top;
-	padding-top: 40px;
-	padding-right: 0;
-	padding-bottom: 20px;
-	padding-left: 0;/*	border-top-width: 4px;
-	border-top-style: solid;
-	border-top-color: #003;*/
+html, body {
+    height: 100%;
 }
 
+.wrapper {}
 
+.footer1 {
+    background: #fff url("../images/footer/footer-bg.png") repeat scroll left top;
+    padding-top: 40px;
+    padding-right: 0;
+    padding-bottom: 20px;
+    padding-left: 0;
+    /*	border-top-width: 4px;
+ 	border-top-style: solid;
+ 	border-top-color: #003;*/
+}
 
 .title-widget {
-	color: #898989;
-	font-size: 20px;
-	font-weight: 300;
-	line-height: 1;
-	position: relative;
-	text-transform: uppercase;
-	font-family: 'Fjalla One', sans-serif;
-	margin-top: 0;
-	margin-right: 0;
-	margin-bottom: 25px;
-	margin-left: 0;
-	padding-left: 28px;
+    color: #898989;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1;
+    position: relative;
+    text-transform: uppercase;
+    font-family: 'Fjalla One', sans-serif;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 25px;
+    margin-left: 0;
+    padding-left: 28px;
 }
 
 .title-widget::before {
@@ -62,8 +82,6 @@ nav{
     top: -2px;
     width: 5px;
 }
-
-
 
 .widget_nav_menu ul {
     list-style: outside none none;
@@ -80,20 +98,17 @@ nav{
     width: 3px;
 }
 
-
 .widget_nav_menu ul li {
     font-size: 13px;
     font-weight: 700;
     line-height: 20px;
-	position: relative;
+    position: relative;
     text-transform: uppercase;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     margin-bottom: 7px;
     padding-bottom: 7px;
-	width:95%;
+    width: 95%;
 }
-
-
 
 .title-median {
     color: #636363;
@@ -101,58 +116,67 @@ nav{
     line-height: 20px;
     margin: 0 0 15px;
     text-transform: uppercase;
-	font-family: 'Fjalla One', sans-serif;
+    font-family: 'Fjalla One', sans-serif;
 }
 
-.footerp p {font-family: 'Gudea', sans-serif; }
-
+.footerp p {
+    font-family: 'Gudea', sans-serif;
+}
 
 #social:hover {
-    			-webkit-transform:scale(1.1);
--moz-transform:scale(1.1);
--o-transform:scale(1.1);
-			}
-			#social {
-				-webkit-transform:scale(0.8);
-                /* Browser Variations: */
--moz-transform:scale(0.8);
--o-transform:scale(0.8);
--webkit-transition-duration: 0.5s;
--moz-transition-duration: 0.5s;
--o-transition-duration: 0.5s;
-			}
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
+#social {
+    -webkit-transform: scale(0.8);
+    /* Browser Variations: */
+    -moz-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    -webkit-transition-duration: 0.5s;
+    -moz-transition-duration: 0.5s;
+    -o-transition-duration: 0.5s;
+}
+
 /*
-    Only Needed in Multi-Coloured Variation
-                                               */
-			.social-fb:hover {
-				color: #3B5998;
-			}
-			.social-tw:hover {
-				color: #4099FF;
-			}
-			.social-gp:hover {
-				color: #d34836;
-			}
-			.social-em:hover {
-				color: #f39c12;
-			}
-			.nomargin { margin:0px; padding:0px;}
+     Only Needed in Multi-Coloured Variation
+                                                */
 
+.social-fb:hover {
+    color: #3B5998;
+}
 
+.social-tw:hover {
+    color: #4099FF;
+}
 
+.social-gp:hover {
+    color: #d34836;
+}
 
+.social-em:hover {
+    color: #f39c12;
+}
+
+.nomargin {
+    margin: 0px;
+    padding: 0px;
+}
 
 .footer-bottom {
     background-color: #15224f;
     min-height: 30px;
     width: 100%;
 }
+
 .copyright {
     color: #fff;
     line-height: 30px;
     min-height: 30px;
     padding: 7px 0;
 }
+
 .design {
     color: #fff;
     line-height: 30px;
@@ -160,6 +184,7 @@ nav{
     padding: 7px 0;
     text-align: right;
 }
+
 .design a {
     color: #fff;
 }
