--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,12 @@ nav .navbar-brand a{
     font-size: .7rem;
     color: #ffffff;
 }
+nav .navbar-brand a:visited[href="index.html"]{
+    background-color: #204357;
+}
 
 .cart p, .heart p {
-    font-size: .8rem;
+    font-size: 10pt;
 }
 
 .cart span, .heart span {
@@ -48,11 +51,34 @@ nav .navbar-brand a{
     width: 4rem;
     height: 5rem;
 }
+/*------------------------content--------------------------------------*/
+content{
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(4, 1fr) ;
+    grid-gap:5px;
+}
+content div:nth-child(1){
+    grid-column: 1 / 4;
+    grid-row: 1 / 3;
+}
+
+content div:nth-child(2){
+    grid-column: 1;
+    grid-row: 1 / 3;
+}
+
+content div:nth-child(3){
+    grid-column: 2 / 4;
+}
+.con{
+    border-radius: 10px;
+    background-color: #a84b4b;
+    min-height: 50px;
+}
+/*------------------------content--------------------------------------*/
 
 /*------------------------footer--------------------------------------*/
-.ww{
-    height: 40rem;
-    background-color: #581a1a;
 }
 footer {
     margin-top: 1.5rem;
