--- a/css/style.css
+++ b/css/style.css
@@ -55,33 +55,55 @@ nav .navbar-brand a:visited[href="index.html"]{
 content{
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(4, 1fr) ;
+    grid-template-columns: repeat(auto-fill,minmax(200px ,300px));
+    grid-auto-rows: auto;
+    grid-gap:20px;
+}
+
+.con{
+    display: grid;
+    grid-template-columns: 65px;
+    grid-template-areas:
+    "img1 img img"
+    "img2 img img"
+    "img3 img img"
+    ;
     grid-gap:5px;
 }
-content div:nth-child(1){
-    grid-column: 1 / 4;
-    grid-row: 1 / 3;
-}
-
-content div:nth-child(2){
-    grid-column: 1;
-    grid-row: 1 / 3;
-}
-
-content div:nth-child(3){
-    grid-column: 2 / 4;
-}
-.con{
+.tov{
     border-radius: 10px;
-    background-color: #a84b4b;
-    min-height: 50px;
+    border: 1px solid rgba(67, 65, 69, 0.14);
 }
+.img{
+    border-radius: 10px;
+    grid-area: img;
+}
+.img1, .img2, .img3 {
+    align-self: start;
+    border-radius: 10px;
+
+}
+.img1{grid-area: img1;}
+.img2{grid-area: img2;}
+.img3{grid-area: img3;}
+
+.tov_info {
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-auto-rows: 40px 40px 35px;
+    }
+
+.tov_info button{
+    justify-self: center;
+}
+
 /*------------------------content--------------------------------------*/
 
 /*------------------------footer--------------------------------------*/
-}
+
 footer {
-    margin-top: 1.5rem;
+    margin-top: 2rem;
+
 }
 
 .title-widget {
@@ -106,7 +128,7 @@ footer {
     color: #fff;
     font-size: .8rem;
     display: flex;
-    justify-content: center;
+    justify-content: cnter;
     padding: 8px;
 
 }
