--- a/css/style.css
+++ b/css/style.css
@@ -89,12 +89,11 @@ content{
 
 .tov_info {
     display: grid;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: 40px 40px 35px;
     }
 
 .tov_info button{
     justify-self: center;
+    align-self: end;
 }
 
 /*------------------------content--------------------------------------*/
