--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ nav .navbar-brand a:visited[href="index.html"]{
 }
 /*------------------------content--------------------------------------*/
 content{
+    margin-top: 2rem;
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(auto-fill,minmax(200px ,300px));
@@ -60,19 +61,19 @@ content{
     grid-gap:20px;
 }
 
+.tov{
+    border-radius: 10px;
+    border: 1px solid rgba(67, 65, 69, 0.14);
+    display: grid;
+}
 .con{
     display: grid;
     grid-template-columns: 65px;
     grid-template-areas:
     "img1 img img"
     "img2 img img"
-    "img3 img img"
-    ;
+    "img3 img img";
     grid-gap:5px;
-}
-.tov{
-    border-radius: 10px;
-    border: 1px solid rgba(67, 65, 69, 0.14);
 }
 .img{
     border-radius: 10px;
@@ -89,11 +90,13 @@ content{
 
 .tov_info {
     display: grid;
+    align-content: end;
     }
 
-.tov_info button{
+.tov button{
     justify-self: center;
     align-self: end;
+
 }
 
 /*------------------------content--------------------------------------*/
@@ -126,8 +129,6 @@ footer {
     background-color: #15224f;
     color: #fff;
     font-size: .8rem;
-    display: flex;
-    justify-content: cnter;
     padding: 8px;
 
 }
