--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,19 @@
     padding: 0;
 }
 
-nav {
-    border-bottom: 1px solid rgba(31, 26, 26, 0.25);
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-auto-rows: auto;
+    grid-template-areas: "header header header header header" "sidebar content content content content" "sidebar content content content content" "footer footer footer footer footer";
 }
 
-body {
-    background-color: #e98484;
+header {
+    grid-area: header;
+}
+
+nav {
+    border-bottom: 1px solid rgba(31, 26, 26, 0.25);
 }
 
 nav a {
@@ -21,14 +28,15 @@ nav a:hover {
     background-color: rgba(96, 59, 95, 0.04);
 }
 
-nav .navbar-brand a{
+nav .navbar-brand a {
     padding: .3rem;
     border-radius: .2rem;
     background-color: #27719a;
     font-size: .7rem;
     color: #ffffff;
 }
-nav .navbar-brand a:visited[href="index.html"]{
+
+nav .navbar-brand a:visited[href="index.html"] {
     background-color: #204357;
 }
 
@@ -51,52 +59,133 @@ nav .navbar-brand a:visited[href="index.html"]{
     width: 4rem;
     height: 5rem;
 }
+
+/*------------------------Sidebar--------------------------------------*/
+
+.sidebar {
+    background-color: #fff;
+    grid-area: sidebar;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: repeat(4, 1fr);
+    grid-row-gap: .5rem;
+    margin-top: 2rem;
+}
+
+.view, .manufacturer, .size, .price {
+    border: 1px solid rgba(67, 65, 69, 0.14);
+    padding: 15px 30px;
+}
+
+/*--------------------CheckBox---------------------*/
+
+.sidebar label {
+    display: inline-block;
+    margin-left: 1rem;
+    width: 100%;
+    font-size: 12pt;
+}
+.sidebar p{
+    font-size: 15pt;
+}
+
+.sidebar label:hover{
+    color: #27719a;
+}
+.sidebar input {
+    display: none;
+}
+
+.sidebar i {
+    display: inline-block;
+    width: 1.3rem;
+    height: 1.3rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    position: relative;
+    top: 6px;
+    right: 10px;
+}
+
+.sidebar i::before {
+    content: "";
+    top: 3px;
+    left: 3px;
+    bottom: 3px;
+    right: 3px;
+    border-radius: 4px;
+    position: absolute;
+    background: #27719a;
+    transform: scale(0);
+    opacity: 0;
+    transition: .3s;
+}
+
+input:checked+i::before {
+    transform: scale(1);
+    opacity: 1;
+}
+
+/*--------------------CheckBox---------------------*/
+
+/*------------------------Sidebar--------------------------------------*/
+
 /*------------------------content--------------------------------------*/
-content{
+
+content {
     margin-top: 2rem;
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(auto-fill,minmax(200px ,300px));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 300px));
     grid-auto-rows: auto;
-    grid-gap:20px;
+    grid-gap: 20px;
+    grid-area: content;
 }
 
-.tov{
+.tov {
     border-radius: 10px;
     border: 1px solid rgba(67, 65, 69, 0.14);
     display: grid;
 }
-.con{
-    display: grid;
+
+.con {
+    display: inline-grid;
     grid-template-columns: 65px;
-    grid-template-areas:
-    "img1 img img"
-    "img2 img img"
-    "img3 img img";
-    grid-gap:5px;
+    grid-template-areas: "img1 img img" "img2 img img" "img3 img img";
+    grid-gap: 5px;
 }
-.img{
+
+.img {
     border-radius: 10px;
     grid-area: img;
 }
+
 .img1, .img2, .img3 {
     align-self: start;
     border-radius: 10px;
-
 }
-.img1{grid-area: img1;}
-.img2{grid-area: img2;}
-.img3{grid-area: img3;}
+
+.img1 {
+    grid-area: img1;
+}
+
+.img2 {
+    grid-area: img2;
+}
+
+.img3 {
+    grid-area: img3;
+}
 
 .tov_info {
     display: grid;
     align-content: end;
-    }
+}
 
-.tov button{
+.tov button {
+    margin-bottom: 1.35rem;
     justify-self: center;
     align-self: end;
-
 }
 
 /*------------------------content--------------------------------------*/
@@ -105,7 +194,7 @@ content{
 
 footer {
     margin-top: 2rem;
-
+    grid-area: footer;
 }
 
 .title-widget {
@@ -114,7 +203,7 @@ footer {
     text-transform: uppercase;
 }
 
-.widget_nav_menu ul li{
+.widget_nav_menu ul li {
     font-size: .8rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -126,12 +215,10 @@ footer {
 
 .bottom {
     height: 2.7rem;
-    background-color: #15224f;
+    background-color: #204357;
     color: #fff;
     font-size: .8rem;
     padding: 8px;
-
 }
-
 
 /*------------------------footer--------------------------------------*/
