--- a/css/delivery-media.css
+++ b/css/delivery-media.css
@@ -14,6 +14,10 @@
 /****************************************************** Адаптив (768) **************************************************************************************************/
 
 @media screen and (max-width: 768px) {
+    content h1{
+        margin: 2rem 1.2rem;
+        font-size: 15pt;
+    }
 
 }
 @media screen and (max-width: 576px) {
@@ -28,6 +32,9 @@
 
 }
 @media screen and (max-width: 320px) {
-
+    content h1{
+        margin: 1rem 1.2rem;
+        font-size: 10pt;
+    }
 
 }
