--- a/css/delivery-media.css
+++ b/css/delivery-media.css
@@ -14,10 +14,7 @@
 /****************************************************** Адаптив (768) **************************************************************************************************/
 
 @media screen and (max-width: 768px) {
-    content h1{
-        margin: 2rem 1.2rem;
-        font-size: 15pt;
-    }
+
 
 }
 @media screen and (max-width: 576px) {
@@ -27,14 +24,13 @@
 /****************************************************** Адаптив (480) **************************************************************************************************/
 
 @media screen and (max-width: 480px) {
+content{
 
+}
 
 
 }
 @media screen and (max-width: 320px) {
-    content h1{
-        margin: 1rem 1.2rem;
-        font-size: 10pt;
-    }
+
 
 }
