--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ content {
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(auto-fill, minmax(150px, 300px));
-    grid-auto-rows: auto;
+    grid-auto-rows: 500px;
     grid-gap: 20px;
     grid-area: content;
 }
@@ -190,6 +190,7 @@ content {
     justify-self: center;
     align-self: end;
 }
+
 
 /*------------------------content--------------------------------------*/
 
