--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-auto-rows: auto;
-    grid-template-areas: "header header header header header" "sidebar content content content content" "sidebar content content content content" "footer footer footer footer footer";
+    grid-template-areas:
+    "header header header header header"
+    "sidebar content content content content"
+    "sidebar content content content content"
+    "footer footer footer footer footer";
 }
 
 header {
@@ -134,62 +138,30 @@ input:checked+i::before {
 
 content {
     margin-top: 2rem;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 300px));
-    grid-auto-rows: 500px;
     grid-gap: 20px;
     grid-area: content;
 }
 
-.tov {
-    border-radius: 10px;
-    border: 1px solid rgba(67, 65, 69, 0.14);
+.goods{
     display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 200px));
+    grid-auto-rows: auto;
+    grid-gap: 20px;
 }
 
-.con {
-    display: inline-grid;
-    grid-template-columns: 65px;
-    grid-template-areas:
-    "img1 img img"
-    "img2 img img"
-    "img3 img img";
-    grid-gap: 5px;
-}
-
-.img {
-    border-radius: 10px;
-    grid-area: img;
-}
-
-.img1, .img2, .img3 {
-    align-self: start;
-    border-radius: 10px;
-}
-
-.img1 {
-    grid-area: img1;
-}
-
-.img2 {
-    grid-area: img2;
-}
-
-.img3 {
-    grid-area: img3;
-}
-
-.tov_info {
+.single-goods {
     display: grid;
-    align-content: end;
+    justify-items: center;
+    border-radius: 8px;
+    border:  1px solid rgba(0, 0, 0, 0.3);
+    float: left;
 }
 
-.tov button {
-    margin-bottom: 1.35rem;
-    justify-self: center;
-    align-self: end;
-}
+
+
+
+
+
 
 
 /*------------------------content--------------------------------------*/
